# vk-practice

./: .clang-format  .clangd  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  build.ps1
shaders/: colored_triangle.slang  colored_triangle_mesh.slang  default.slang  gradient.comp.slang  gradient.slang  gradient_color.comp.slang  gradient_color.slang  input_structures.glsl  input_structures.slang  mesh_vert.vert  sky.comp.slang  sky.slang
src/: CMakeLists.txt  camera.cpp  camera.h  deletion_queue.h  main.cpp  utils.h  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_initializers.h  vk_loader.cpp  vk_loader.h  vk_pipelines.cpp  vk_pipelines.h  vk_types.h
